force-app/main/default/objects/SystemEvent__e/SystemEvent__e.object-meta.xml
<CustomObject>
    <label>System Event</label>
    <pluralLabel>System Events</pluralLabel>
</CustomObject>