force-app/main/default/objects/SystemEvent__e/fields/Handler__c.field-meta.xml
<CustomField>
    <fullName>Handler__c</fullName>
    <description>Nombre de la clase Apex (extiende SystemEventAbstractHandler) que entrega el evento.</description>
    <label>Handler</label>
    <length>255</length>
    <type>Text</type>
</CustomField>