force-app/main/default/objects/SystemEvent__e/fields/Payload__c.field-meta.xml
<CustomField>
    <fullName>Payload__c</fullName>
    <description>Objeto de dominio serializado en JSON (p. ej. la SystemAlert). El handler lo deserializa.</description>
    <label>Payload</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>