force-app/main/default/objects/SystemEvent__e/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <description>HIGH / MEDIUM / LOW (enum SystemAlert.Severity). Solo observabilidad; la fuente de verdad es el Payload.</description>
    <label>Severity</label>
    <length>20</length>
    <type>Text</type>
</CustomField>