force-app/main/default/objects/SystemEvent__e/fields/Summary__c.field-meta.xml
<CustomField>
    <fullName>Summary__c</fullName>
    <description>Frase legible del evento para leerlo de un vistazo, p. ej. &quot;B2B Context error found for user John Smith&quot;. Solo observabilidad.</description>
    <label>Summary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>